# libcaprese

./: .clang-format  CMakeLists.txt  README.md
include/libcaprese/: attribute.h  cap.h  ipc.h  root_boot_info.h  syscall.h
include/libcaprese/arch/rv64/: root_boot_info_rv64.h  syscall_rv64.h
include/libcaprese/cxx/: compare.h  id_map.h  raii.h
src/: ipc.c  syscall.S  syscall.c
src/arch/rv64/: syscall_rv64.inc.S
src/cxx/: raii.cpp
